Fix 'Join' block positioning on mobile

--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -11,8 +11,10 @@
 
         @include mobile {
             background: none;
+            height: auto;
             margin: 0;
-            min-height: 33rem;
+            max-height: none;
+            min-height: auto;
             padding: 0;
 
             &::after {
@@ -37,7 +39,9 @@
         @include mobile {
             border-radius: 0;
             height: auto;
+            margin-bottom: 1.5rem;
             padding: 3rem;
+            position: static;
             width: 100%;
         }
 
